# biohazrd

./: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE  README.md  debug.sh  install-dependencies.sh  release.sh  run.sh  updatesrcdeps.sh
Components/: AnimationComponent.cpp  AnimationComponent.h  HitboxComponent.cpp  HitboxComponent.h  MovementComponent.cpp  MovementComponent.h
Config/: accepted_keys.ini  editorstate_keybinds.ini  graphics.ini  window.ini
Debug/: makefile  rpg-game  sources.mk
Debug/Config/: gamestate_keybinds.ini  window.ini
Debug/Entities/: Entity.d  subdir.mk
Debug/Resource Files/: Button.d  subdir.mk
Debug/Source Files/: Game.d  State.d  main.d  subdir.mk
Debug/States/: GameState.d  MainMenuState.d  State.d  subdir.mk
Entities/: Entity.cpp  Entity.h  Player.cpp  Player.h
GUI/: GUI.cpp  GUI.h  PauseMenu.cpp  PauseMenu.h
Map/: TileMap.cpp  TileMap.h
Maps/: test.biomap
PCH/: stdafx.h
Resource Files/: Button.cpp  Button.h
Settings/: GraphicsSettings.cpp  GraphicsSettings.h
Source Files/: Game.cpp  Game.h  State.cpp  State.h  main.cpp
States/: EditorState.cpp  EditorState.h  GameState.cpp  GameState.h  MainMenuState.cpp  MainMenuState.h  SettingsState.cpp  SettingsState.h  State.cpp  State.h
Tile/: Tile.cpp  Tile.h
TileMap/: TileMap.cpp  TileMap.h
include/: AnimationComponent.h  AttributeComponent.h  CMakeLists.txt  EditorState.h  Entity.h  ErrorHandler.h  GUI.h  Game.h  GameState.h  GraphicsSettings.h  HitboxComponent.h  MainMenuState.h  MovementComponent.h  Player.h  PlayerGUI.h  SettingsState.h  State.h  Tile.h  TileMap.h  stdafx.h
include/AI/Behaviors/: AIBehavior.h  AIBehaviors.h  AIFindPathBehavior.h  AIFollow.h  AIFollowBehavior.h
include/Components/: AIComponent.h  AnimationComponent.h  AttributeComponent.h  HitboxComponent.h  MovementComponent.h  SkillComponent.h  SoundComponent.h
include/Engine/: Engine.h  Game.h
include/Entities/: Enemy.h  Entity.h  Player.h
include/Entities/Enemies/: Enemies.h  Enemy.h  EnemySystem.h  GreenSlime.h
include/GUI/: GUI.h  PlayerGUI.h  TextTagSystem.h
include/GUI/Player/: InventoryGUI.h  PlayerGUI.h
include/GUI/TabMenu/: PlayerTabMenu.h  TabMenu.h
include/GUI/TabMenu/Tabs/: CharacterTab.h  Tab.h  Tabs.h
include/Items/: Inventory.h  Item.h  Items.h
include/Items/MeleeWeapons/: MeleeWeapon.h  Sword.h
include/Items/RangedWeapons/: Bow.h  RangedWeapon.h
include/Items/Weapons/: Weapon.h
include/Items/Weapons/MeleeWeapons/: MeleeWeapon.h  Sword.h
include/Items/Weapons/RangedWeapons/: Bow.h  RangedWeapon.h
include/Sound/: SoundSystem.h
include/Spawners/: EnemySpawner.h
include/States/: EditorState.h  GameState.h  MainMenuState.h  SettingsState.h  State.h  WorldSelectionState.h
include/States/EditorModes/: CollisionEditorMode.h  DefaultEditorMode.h  EditorMode.h  EditorModes.h  EnemyEditorMode.h
include/Tile/: Tile.h
include/TileMap/: MapManager.h  TileMap.h
include/Tiles/: EnemySpawner.h  EnemySpawnerTile.h  RegularTile.h  Tile.h  Tiles.h
include/Utils/: ErrorHandler.h  GraphicsSettings.h  IniParser.h  Logger.h  PNGArray.h
include/Utils/IniParser/: IniParser.h  Lexer.h  Parser.h  TextSpan.h  Token.h  stdafx.h
include/Video/: Video.h
src/: AnimationComponent.cpp  AttributeComponent.cpp  CMakeLists.txt  EditorState.cpp  Entity.cpp  ErrorHandler.cpp  GUI.cpp  Game.cpp  GameState.cpp  GraphicsSettings.cpp  HitboxComponent.cpp  MainMenuState.cpp  MovementComponent.cpp  Player.cpp  PlayerGUI.cpp  SettingsState.cpp  State.cpp  Tile.cpp  TileMap.cpp  main.cpp
src/AI/Behaviors/: AIBehavior.cpp  AIFindPathBehavior.cpp  AIFollow.cpp  AIFollowBehavior.cpp
src/Assets/Videos/: bg.pnga  loader.pnga
src/Components/: .AttributeComponent.cpp.swp  AIComponent.cpp  AnimationComponent.cpp  AttributeComponent.cpp  HitboxComponent.cpp  MovementComponent.cpp  SkillComponent.cpp  SoundComponent.cpp
src/Config/: accepted_keys.ini  editorstate_keybinds.ini  gamestate_keybinds.ini  graphics.ini  keybinds.ini  sounds.ini  textures.ini  videos.ini
src/Engine/: Engine.cpp  Game.cpp
src/Entities/: Enemy.cpp  Entity.cpp  Player.cpp
src/Entities/Enemies/: Enemy.cpp  EnemySystem.cpp  GreenSlime.cpp
src/GUI/: GUI.cpp  PlayerGUI.cpp  TextTagSystem.cpp
src/GUI/Player/: InventoryGUI.cpp  PlayerGUI.cpp
src/GUI/TabMenu/: PlayerTabMenu.cpp  TabMenu.cpp
src/GUI/TabMenu/Tabs/: CharacterTab.cpp  Tab.cpp
src/Items/: Inventory.cpp  Item.cpp
src/Items/MeleeWeapons/: MeleeWeapon.cpp  Sword.cpp
src/Items/RangedWeapons/: Bow.cpp  RangedWeapon.cpp
src/Items/Weapons/: Weapon.cpp
src/Logs/: Thu Jun 27 12:54:46 2024.txt  Wed Jun 26 18:24:55 2024.txt  Wed Jun 26 21:29:09 2024.txt  Wed Jun 26 21:59:57 2024.txt  Wed Jun 26 22:18:52 2024.txt  Wed Jun 26 22:19:39 2024.txt
src/Maps/: New World.biomap  Novo mundo.biomap  maps.ini  test.biomap  test2.biomap  test_2.biomap  unnamed.biomap
src/Shaders/: fragment_shader.frag  vertex_shader.vert
src/Sound/: SoundSystem.cpp
src/Spawners/: EnemySpawner.cpp
src/States/: EditorState.cpp  GameState.cpp  MainMenuState.cpp  SettingsState.cpp  State.cpp  WorldSelectionState.cpp
src/States/EditorModes/: CollisionEditorMode.cpp  DefaultEditorMode.cpp  EditorMode.cpp  EnemyEditorMode.cpp
src/Tile/: Tile.cpp
src/TileMap/: MapManager.cpp  TileMap.cpp
src/Tiles/: EnemySpawner.cpp  EnemySpawnerTile.cpp  RegularTile.cpp  Tile.cpp
src/Utils/: ErrorHandler.cpp  GraphicsSettings.cpp  IniParser.cpp  Logger.cpp  PNGArray.cpp
src/Utils/IniParser/: IniParser.cpp  Lexer.cpp  Parser.cpp  TextSpan.cpp  Token.cpp
src/Video/: Video.cpp
(+4 files in other folders)
